@@ -697,6 +697,7 @@
   <string><id>12006</id><value>Audio visualisation</value></string>
   <string><id>12007</id><value>My Picture/slideshow</value></string>
   <string><id>12008</id><value>Filestacking dialog</value></string>
+  <string><id>12009</id><value>Force index rebuilding...</value></string>
 
 
   <string><id>12310</id><value>0</value></string>
